- ``overlay``: new attributes: ``fullscreen`` and ``full_interface`` for overlays that need access to the entire screen or the scaled interface area, respectively
- ``string:wrap``: now preserves inter-word spacing and can return the wrapped lines as a table of strings instead of a single multi-line string

## Removed
- `plants`: renamed to `plant`
- ``gui.FramedScreen``: this class is now deprecated; please use ``gui.ZScreen`` and ``widgets.Window`` instead
- ``dfhack.HIDE_CONSOLE_ON_STARTUP`` and ``dfhack.HIDE_ARMOK_TOOLS`` are no longer directly accessible. Please use `control-panel` or `gui/control-panel` to interact wtih those settings.

# 50.13-r2.1

## Fixes
- `suspendmanager`: stop suspending single tile stair constructions

# 50.13-r2

## New Tools
- Updated for adventure mode: `reveal`

## New Features
- `buildingplan`: quick material filter favorites on main planner panel
- DFHack and the Dwarf Fortress translation project can now both be run at the same time

## Fixes
- `zone`: fix display of distance from cage/pit for small pets in assignment dialog
- `blueprint`: correctly define stockpile boundaries in recorded stockpile ("place") blueprints when there are adjacent non-rectangular stockpiles of identical types
- `dig`: refresh count of tiles that will be modified by "mark all designated tiles on this z-level for warm/damp dig" when the z-level changes
- `dig`: don't affect already-revealed tiles when marking z-level for warm/damp dig
- `zone`: refresh values in distance column when switching selected pastures when the assign animals dialog is open
- `logistics`: include semi-wild pets when autoretrain is enabled
- `suspendmanager`: fully suspend unbuildable dead ends (e.g. buildling second level of a wall when the wall top is only accessible via ramp, causing the planned wall to be pathable but not buildable)
- `prospect`: don't use scientific notation for representing large numbers

## Misc Improvements