@@ -126,6 +126,7 @@ Template for new versions:
 - ``gui.get_interface_rect``, ``gui.get_interface_frame``: convenience functions for working with scaled interfaces
 - ``overlay``: new attributes: ``fullscreen`` and ``full_interface`` for overlays that need access to the entire screen or the scaled interface area, respectively
 - ``string:wrap``: now preserves inter-word spacing and can return the wrapped lines as a table of strings instead of a single multi-line string
+- ``dfhack.internal.getClipboardTextCp437Multiline``: for retrieving multiline text from the system clipboard
 
 ## Removed
 - `plants`: renamed to `plant`
